# naev

./: .clang-format  .clang-format_wip  .clang-tidy  .codespell.exclude  .codespell.words.exclude  .codespellignore  .codespellrc  .editorconfig  .gdbinit  .gitignore  .gitmodules  .hgignore  .hgtags  .luacheckrc  .mailmap  .pre-commit-config.yaml  .travis.yml  .u_codespell_unmatch  AUTHORS  CHANGELOG  Cargo.toml  Cargo.toml.in  Changelog.md  EconomyGuide  Economy_plan  LICENSE  Makefile  Makefile.am  PR.md  README  README (OSX)  Readme.md  TODO  ai.c  ai.h  ai_basic.lua  all.h  appveyor.yml  autogen.sh  build.rs.in  (+48 more)
dat/naevpedia/outfits/: meson.build  outfits.py
dat/naevpedia/ships/: classes.lua  classes.md  meson.build  ships.py
dat/outfits/: lua_outfit_example.lua  meson.build
dat/outfits/accessory/: ad_usb.xml  air_freshener.xml  black_cat_doll.lua  black_cat_doll.xml  broken_nebular_shielding_prototype.xml  commemorative_stein.xml  cyborg_feather.xml  dv_handbook.xml  fancy_key_chain.xml  fuzzy_dice.xml  goatee_marker.xml  jacks_eyepatch.xml  (+23 more)
dat/scripts/: bioship.lua  buyrep.lua  cargo_common.lua  chatter.lua  cinema.lua  class.lua  colour.lua  coreprofile.lua  enum.lua  equipopt.lua  escort.lua  factions.lua  fleet.lua  fleet_form.lua  fleethelper.lua  format.lua  formation.lua  gene.lua  imageproc.lua  intro.lua  jumpdist.lua  lazyload.lua  linenoise.lua  lmisn.lua  lmusic.lua  love.lua  love_shaders.lua  luaspfx.lua  luatk.lua  lyaml.lua  map_all_ships.lua  merge_tables.lua  meson.build  minerva.lua  misn_test.lua  misnhelper.lua  naevpedia.lua  nextjump.lua  numstring.lua  pilotai.lua  (+26 more)
dat/tech/: __collective_outfits.xml  __collective_ships.xml  __heavy_combat_vessel_license.xml  __heavy_weapon_license.xml  all_outfits.sh  all_outfits.xml  all_outfits_dep.sh  all_ship.xml  all_ships.sh  all_ships.xml  all_ships_dep.sh  basic_civilian_ships.xml  basic_outfits1.xml  basic_outfits2.xml  basic_outfits_1.xml  basic_outfits_2.xml  basic_trade_ships.xml  beam_1.xml  beam_2.xml  bioship_outfits.xml  black_lotus_tech.xml  bulk_trade_ships.xml  cargo_trader_outfits.xml  crappy_core_systems.xml  criminal_outfits.xml  dreamer_tech.xml  dvaered_elite_outfits.xml  dvaered_military_outfits.xml  dvaered_military_ships.xml  dvaered_ships_large.xml  dvaered_ships_medium.xml  dvaered_ships_small.xml  empire_elite_outfits.xml  empire_military_outfits.xml  empire_ships_large.xml  empire_ships_medium.xml  empire_ships_small.xml  engines_cargo.xml  engines_high.xml  engines_low.xml  (+118 more)
docs/: Doxyfile.in  Makefile  Makefile.am  c2luadoc.sh  ldoc.sh  luadoc.sh  meson.build  naev-taglet.lua  naev_manual.tex
docs/ai/: API
docs/c/: Doxyfile.in
docs/factions/: empire  empire_organigram.py  overview  thurion
docs/html/: ai.html  bkg.html  camera.html  colour.html  commodity.html  diff.html  evt.html  faction.html  gfx.html  gui.html  hook.html  index.html  jump.html  luadoc.css  misn.html  music.html  naev.html  news.html  outfit.html  pilot.html  planet.html  player.html  rnd.html  ship.html  system.html  tex.html  time.html  tk.html  tut.html  var.html  vec2.html
docs/lore/: .gitignore  Gemfile  Makefile  Readme.md  Rules  loremaster.py  nanoc.yaml
docs/lua/: c2luadoc.sh  config.ld  header.ltp  ldoc.css  ldoc.ltp  naev-taglet.lua  src2luadoc.sh
docs/manual/: Makefile  Readme.md  book.toml  intro.md  meson.build  naev.cls  naev_dev_manual.tex  naev_guide.tex
docs/missions/: bar_template.lua  complete.lua  computer_template.lua  example1.lua  layout.dia  layout.dia~  mission_template.lua  msn_template.lua  skel.lua
docs/plot/: ReadMe-LostInSpace.txt  campaign_collective  kidnapped  setting  zalek_sciwrong
docs/ships/: classification
extras/: autotests.lua  meson.build  release.sh  resource.rc  resource.rc.in  steam-compile.sh  update-po.sh  vimrc
extras/logos/: naev.icns
extras/macos/: Info.plist.in  bundle.py  bundle.sh  codesign.sh  createDMG.sh  entitlements.plist  naev.icns  packageMACOS.sh
extras/macosx/: COMPILE  Info.plist  README  SDLMain.m  main.m  naev-Info.plist  naev_Prefix.pch
extras/rpm/: README  naev.spec
extras/spec/: naev.spec
extras/steam/: SteamDeploy.sh
extras/win_installer/: naev.nsi
extras/windows/: bundle.py  bundle.sh  createNSIS.py  createNSIS.sh  extract_dlls.py  naev.exe.manifest.in  packageWindows.py  packageWindows.sh  resource.rc.in
lib/csparse/: Makefile  Makefile.am  cs_amd.c  cs_dmperm.c  cs_droptol.c  cs_dropzeros.c  cs_qr.c  cs_updown.c
po/: LINGUAS  Makevars  POTFILES.in  POTFILES.in.temp  POTFILES.skip  POTFILES_COMBINED.in  POTFILES_XML  POTFILES_XML.in  ca.po  credits_pot.py  cs.po  de.po  en-us.po  en_US.po  es.po  fr.po  id.po  it.po  ja.po  ko.po  meson.build  naev.pot  naevpedia.pot  naevpedia_pot.py  outfits_generated.pot  physfs.pot  pt_BR.po  pt_PT.po  ru.po  toml.pot  toml_pot.py  translation.its  zh_Hans.po
po/its/: translation.its  translation.loc
src/: Doxyfile  Makefile.am  SDL_PhysFS.h  SDL_keynames.h  ai.c  ai.h  ai_extra.h  all.h  array.c  array.h  array.rs  asteroid.c  asteroid.h  asteroid.rs  asteroid_internal.h  attributes.h  background.c  background.h  background.rs  base64.c  base64.h  board.c  board.h  buffer.rs  camera.c  camera.h  camera.rs  cgltf.h  claim.c  claim.h  cmark_wrap.c  cmark_wrap.h  collision.c  collision.h  collision.rs  colour.c  colour.h  colours_c_gen.py  comm.c  comm.h  (+470 more)
src/audio/: Cargo.toml.in
src/collide/: Cargo.toml.in
src/core/: Cargo.toml.in
src/gettext/: Cargo.toml.in
src/helpers/: Cargo.toml.in
src/log/: Cargo.toml.in
src/lua/: collide.rs  collide_test.lua  ryaml.rs
src/mutex/: Cargo.toml.in  meson.build
src/ndata/: Cargo.toml.in
src/nlog/: Cargo.toml.in
src/physics/: Cargo.toml.in
src/pluginmgr/: Cargo.toml  Cargo.toml.in
src/pluginmgr-cli/: Cargo.toml  Cargo.toml.in
src/pluginmgr-gui/: Cargo.toml.in  meson.build
src/renderer/: Cargo.toml.in
src/tk/: Makefile.am  toolkit_priv.h  widget.h
src/toolkit/: Cargo.toml.in
src/utils/: Cargo.toml.in
test/: meson.build  watch-for-msg.py
test/glcheck/: getglversion.c  meson.build
(+9258 files in other folders)
